support for 1.5.1 and below + organize downloaded files into folders